--- a/style.css
+++ b/style.css
@@ -5,20 +5,21 @@
 }
 
 body{
-	background-color: #bdb76b;
+	background-color: #24272E;
 }
 
 header{
-	background: #f0e68c;
+	background: white;
 	padding: 20px;
 }
 
 
 
 header > h1 {
-	color: #ff4500;
+	color: #24272E;
 	text-align: center;
 	font-family: Palatino;
+	font-size: 60px;
 }
 
 .score-board {
@@ -26,7 +27,7 @@ header > h1 {
 	border: 3px solid white;
 	border-radius: 4px;
 	width: 200px;
-	color: black;
+	color: white;
 	font-size: 46px;
 	text-align: center;
 	padding: 15px 20px;
@@ -35,8 +36,8 @@ header > h1 {
 }
 
 .badge{
-	background: #ffdab9;
-	color: black;
+	background: #E25840;
+	color: white;
 	font-size: 14px;
 	padding: 2px 10px;
 	font-family: sans-serif;
@@ -56,7 +57,7 @@ header > h1 {
 
 .result {
 	font-size: 40px;
-	color: black;
+	color: white;
 }
 
 .result > p {
@@ -71,24 +72,28 @@ header > h1 {
 }
 
 .choice {
-	border: 4px solid white;
-	border-radius: 30px;
+	border: 8px solid white;
+	border-radius: 50px;
 	display: inline-block;
 	padding: 10px;
 	margin: 0 15px;
 	transition: all 0.3s ease;
 }
 
-.choice:hover {
-	cursor: pointer;
-	background: #b5c88d;
+#r {
+	border-color: red;
 }
 
-#message{
-	text-align: center;
-	color: black;
-	font-family: sans-serif;
-	font-weight: bold;
-	font-size: 20px;
+#p{
+	border-color:lightgreen;
+}
+
+#s{
+	border-color: pink;
+}
+
+.choice:hover {
+	cursor: pointer;
+	background: #51545C;
 }
 
